@@ -150,6 +150,9 @@ hr {
 }
 
 /* I */
+img .img-400 {
+  width: 400px;
+}
 
 .inline {
   display: inline-block;
@@ -253,7 +256,11 @@ ul.inline li {
 }
 
 
-
+/* R */
+.red-border {
+  border: 1px solid red;
+  padding: .2em;
+}
 
 /**
  * reports
