@@ -1,17 +1,0 @@
-
-.maps-index
-  %h1 Maps #{link_to '[+]', new_map_path}
-  - @maps.each do |map|
-    .item
-      .col
-        = render 'map_meta_row', map: map
-      .col
-        .row
-          .a Markers (#{map.markers.length})
-          .a #{button_to '+', new_map_marker_path(map), method: :get}
-        %ul.markers
-          - map.markers.each do |marker|
-            %li
-              = marker.slug
-              = link_to '[~]', edit_marker_path(marker)
-
