@@ -10,20 +10,5 @@
         = image_tag m.image ? m.image.image.url(:original) : image_missing
         = image_tag('icons/10x10_red-cross.png', class: 'red-cross', style: "top: #{m.centerOffsetY-10}px; left: #{m.centerOffsetX-10}px;" )
 
-  .markers-list
-    %h1
-      Markers (#{@markers.length})
-      = link_to '[+]', new_marker_path({ map_id: @map.id })
-    - @markers.each do |m|
-      = form_for m, { html: { class: "item #{m.slug}" }, url: marker_path(m.id) } do |f|
-        = m.slug
-        = link_to '[~]', edit_marker_path(m.id)
-        .field
-          = f.label :x
-          = f.text_field :x
-        .field
-          = f.label :y
-          = f.text_field :y
-        .field
-          = f.submit 'Save'
+  = render 'ish_manager/markers/index_small', markers: @markers, map: @map
 
