@@ -1,0 +1,28 @@
+
+.markers--index-small.markers-list
+  %h1
+    Markers (#{markers.length})
+    = link_to '[+]', new_marker_path({ map_id: map.id })
+  - markers.each do |m|
+    = form_for m, { html: { class: "item #{m.slug}" }, url: marker_path(m.id) } do |f|
+      .flex-row
+        .flex-column
+          .a= m.name
+          %b= m.slug
+        = link_to '[~]', edit_marker_path(m.id)
+      .flex-row
+        .flex-column
+          .a on map:
+          = image_tag( m.image ? m.image.image.url(:thumb) : image_missing )
+        .flex-column
+          .a title:
+          = image_tag( m.title_image ? m.title_image.image.url(:thumb) : image_missing )
+        .field
+          = f.label :x
+          = f.text_field :x
+        .field
+          = f.label :y
+          = f.text_field :y
+        .field
+          = f.submit 'Save'
+
