@@ -2,8 +2,8 @@
 .photos-meta.row
   .meta
     On #{ pretty_date photo.created_at }
-    - unless photo.user.blank?
-      By #{ link_to photo.user.username, user_path(photo.user.username) }
+    -# - unless photo.user.blank?
+    -#   By #{ link_to photo.user.username, user_path(photo.user.username) }
     - unless photo.gallery.blank?
       In #{ link_to photo.gallery.name, gallery_path(photo.gallery.slug, 0) }
   = photo.name unless photo.name.blank?
