@@ -11,6 +11,7 @@ describe IshManager::MapsController do
 
   it '#map_editor' do
     get :map_editor, params: { id: @map.id }
+    puts! response.body if !response.successful?
     response.should be_successful
     assigns(:map).should_not eql nil
   end
