@@ -21,4 +21,6 @@ master - 20200208 - adding map, marker management
 0.2.0 - 2022-01-26 Video has description and better UI
 0.3.0 - 2022-01-29 warbler learns to alert on options
 0.4.0 - 2022-02-01 warbler can place options orders?
+        2022-02-27 - cc's please
+        2022-03-12 - import/export of maps
 
